feat: Splash page fade in

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,10 @@ a {
   text-decoration: none;
 }
 
+.fade {
+  transition: all 250ms liner 2s;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
